# extmake

./: .gitignore  README.md  pyproject.toml
extmake/: cache.py  cli.py  deps.py  dsn.py  git.py  main.py  parser.py  proxy.py  resolver.py
tests/: conftest.py  test_dsn.py  test_edit_cli.py  test_integration.py
